# APIOnlineTraining

./: .coverage  .env.sample  Dockerfile  README.md  celerybeat-schedule.bak  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_url_video_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: csu.py  pyment_of_create.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_payment_lesson_alter_payment_payment_course.py  0004_alter_user_city.py  0005_payment_payment_link_payment_session_id.py
